# quantized-shark-detection

./: .dvcignore  .gitignore  .justfile  README.md  pyproject.toml
.dvc/: config
configs/: data_prep.yaml
data/: .gitignore  raw.dvc  roboflow-export.dvc  roboflow-split.dvc
data/processed/: .gitignore  calib.dvc  test.dvc  train.dvc  val.dvc
manifests/: split_manifest.json
